# OpenCV

./: README.md  build.gradle
app/: CMakeLists.txt  CMakeLists_back.txt  build.gradle
app/src/androidTest/java/com/funsnap/opencv/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/funsnap/opencv_contrib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: detect.tflite  hand_detection.txt  hand_label_map.txt  labels_hand.txt
app/src/main/cpp/: AlgConnected.c  AlgConnected.h  AlgContourExtract.cpp  AlgContourExtract.h  AlgCvt.cpp  AlgCvt.h  AlgKmeans.cpp  AlgKmeans.h  AlgLib.cpp  AlgObjStructDef.c  AlgStructDef.h  AlgTk_Data.h  AlgTk_Interface.h  AlgTk_StructDef.h  AlgTk_baseStruct.c  AlgTk_baseStruct.h  hand-lib.cpp
app/src/main/java/com/funsnap/opencv/: HandGesture.java
app/src/main/java/com/funsnap/opencv/permission/: PerActivity.java  (+1 more)
app/src/main/java/com/funsnap/opencv_contrib/: MainActivity.java  PerActivity.java  PerChecker.java  PermissionsActivity.java  PermissionsChecker.java  RectView.java
app/src/main/java/com/thinkjoy/zhthinkjoygesturedetectlib/: GestureConfig.java  GestureInfo.java  Point.java  ZHThinkjoyGesture.java
app/src/main/java/com/utility/: FollowUtil.java  MatUtil.java
app/src/main/res/drawable/: selector_camera.xml
app/src/main/res/layout/: activity_main.xml  activity_test.xml
app/src/main/res/raw/: d.xml
app/src/main/res/values/: colors.xml
app/src/test/java/com/funsnap/opencv/: ExampleUnitTest.java
app/src/test/java/com/funsnap/opencv_contrib/: ExampleUnitTest.java
(+21 files in other folders)
